# AlexFFT

./: .gitignore  CMakeLists.txt  README.md
src/: fft.c
